# seasalt

./: .gitignore  benchmark.py  drs notes.md  edges.ipynb  eval-20TTI.ipynb  eval-BSD68.ipynb  eval.ipynb  evaluation_script.py  evaluation_script_gau.py  evaluation_script_gau_restormer.py  evaluation_script_restormer_local.py  evaluation_script_sidd.py  justfile  pyproject.toml  scratch copy.ipynb  scratch.ipynb  train.py  train_noise_to_salt.ipynb  train_noise_to_salt_2nd_stage.ipynb
paper/: Main.tex
paper/sections/: Ablation.tex  Abstract.tex  Architecture.tex  Experimentation.tex  Literature Review.tex  References.tex  Training.tex
paper/sections/experiments/: Bernoulli.tex  Gaussian.tex  Poisson.tex  SAP.tex
restormer_implementation/: __init__.py  restormer.py
seasalt/: __init__.py  cython_seasalt.c  cython_seasalt.pyx  fast_seasalt.py  seasalt.py
seasalt/noise_to_salt/: noise_to_salt.py
seasalt/salt_net/: __init__.py  hybrid_model.py  hybrid_model_train.py  plotting_utils.py  salt_net_handler.py  utils.py
seasalt/salt_net/denoise_net/: __init__.py  bak.py  model.py
seasalt/salt_net/denoise_seconvnet/: __init__.py  loss.py  model.py  train.py
seasalt/salt_net/noise_detector_unet/: __init__.py  loss.py  model.py  train.py
seasalt/salt_net/processing/: __init__.py  data_loaders.py  noise_adders.py
